--- a/create-post/index.html
+++ b/create-post/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- metadata -->
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-        <!-- title and favicon -->
-        <title>Supabase Web App</title>
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
 
-        <!-- js -->
         <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-        <script type="module" src="app.js"></script>
+        <script type="module" src="auth.js"></script>
 
-        <!-- fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -22,30 +16,39 @@
             href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap"
         />
 
-        <!-- css -->
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
-        <!-- add link for page specific css -->
+        <link rel="stylesheet" href="/styles/form.css" />
+        <title>friendsful</title>
     </head>
 
     <body>
         <header class="page-header">
-            <img class="logo" src="/assets/html_css_js.png" alt="logo" />
-            <p class="title">friendsful</p>
-            <img class="logo" src="/assets/reddit.png" alt="logo" />
-            <p class="title">friendsful</p>
-            <nav>
-                <a href="/">Home</a>
-                <a id="sign-out-link" href="auth">Sign Out</a>
-                <a id="add-post-link" href="./create-post/">Add Post</a>
-                <a id="sign-out-link" href="./auth">Sign Out</a>
-            </nav>
+            <img class="logo" src="/assets/html_css_js.png" />
+            <p class="title">Create Post</p>
         </header>
 
         <main>
-            <ul id="post-list">
-                <li></li>
-            </ul>
+            <form id="create-post-form">
+                <h1>Create Post</h1>
+                <label>
+                    <div>Title</div>
+                    <input name="title" required placeholder="Add a title for your post..." />
+                </label>
+
+                <label>
+                    <div>Description</div>
+                    <textarea
+                        name="description"
+                        required
+                        placeholder="Add a description for your post..."
+                    ></textarea>
+                </label>
+
+                <button>Add Post</button>
+
+                <p id="error-display"></p>
+            </form>
         </main>
     </body>
 </html>
