added the createPost in fetch and add createPost functionality

--- a/post-detail/index.html
+++ b/post-detail/index.html
@@ -50,6 +50,7 @@
             <form id="add-comment-form" class="add-comment-form">
                 <input name="text" placeholder="add a comment..." />
                 <button>Send</button>
+                <p id="error-display" class="error"></p>
             </form>
 
             <ul id="comment-list" class="comment-list">
