--- a/create-post/index.html
+++ b/create-post/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
 
         <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-        <script type="module" src="auth.js"></script>
+        <script type="module" src="../create-post/create-post.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
