--- a/create-post/index.html
+++ b/create-post/index.html
@@ -6,7 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
 
-        <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+        <script
+            defer
+            src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
+        ></script>
         <script type="module" src="../create-post/create-post.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
