Styling + Bug Fixes

--- a/auth/index.html
+++ b/auth/index.html
@@ -27,8 +27,8 @@
 
     <body>
         <header class="page-header">
-            <img class="logo" src="/assets/html_css_js.png" />
-            <p class="title">User Auth</p>
+            <img class="logo" src="/assets/friendsful-icon-black.png" alt="logo" />
+            <span class="title">friendsful</span>
         </header>
 
         <main>
