--- a/create-post/index.html
+++ b/create-post/index.html
@@ -27,8 +27,10 @@
 
     <body>
         <header class="page-header">
-            <img class="logo" src="/assets/html_css_js.png" alt="logo" />
-            <p class="title">friendsful</p>
+            <a href="/" class="home-link">
+                <img class="logo" src="/assets/friendsful-icon-black.png" alt="logo" />
+                <span class="title">friendsful</span>
+            </a>
             <nav>
                 <a href="/">Home</a>
                 <a id="sign-out-link" href="../auth">Sign Out</a>
