Realtime Typing updates... Need display

--- a/post-detail/index.html
+++ b/post-detail/index.html
@@ -58,6 +58,7 @@
             </form>
             <p id="error-display" class="error hidden"></p>
 
+            <p class="typing" id="typing">someone is typing....</p>
             <ul id="comment-list" class="comment-list">
                 <li class="comment-container">
                     <h3 class="comment">This is a comment!</h3>
